<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/abc_text_size_display_2_material">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.blogspot.nagellaranjith.android.popularmoviesstage1.DetailActivityFragment">

    <TextView android:id="@+id/original_title_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/abc_text_size_headline_material"
        android:background="@color/material_blue_grey_800"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/details_default_title"
        android:textColor="#FFF"
        android:textSize="@dimen/abc_text_size_display_2_material" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/poster__image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_image_description"
            android:layout_weight="1"
            android:src="@drawable/noimage"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/release_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_default_date"
                android:textColor="#000"/>
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="120min"-->
                <!--android:textColor="#000"-->
                <!--android:id="@+id/duration_text_view"/>-->
            <TextView
                android:id="@+id/rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_default_rating"
                android:textColor="#000"
                />
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="MARK AS FAVORITE"-->
                <!--android:textColor="#000"-->
                <!--android:background="@color/material_blue_grey_800"-->
                <!--android:id="@+id/favorite_text_view"/>-->

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/overview_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text=""/>

</LinearLayout>
</ScrollView>
